# home-assignments

./: README.md  the-floor-is-lava
WWK/coq/: zadCoq.v
WWK/spin/: komentarz.txt  robotnicy.pml  run.sh  tresc.txt
WWK/why3/: pref.mlw  tekstowka.txt
WWWairlines/: README.md  manage.py
WWWairlines/WWWairlines/: settings.py  urls.py  wsgi.py
WWWairlines/flights/: admin.py  forms.py  models.py  tests.py  views.py
WWWairlines/flights/migrations/: 0001_initial.py  0002_data.py
WWWairlines/templates/: flight.html  index.html
avl-tree/: AVL.cc
eigenvalues/: README.md  eigenvalues.py  generate.py  generate2.py
haskell/instant/: Makefile  README.txt
haskell/interpreter/: Makefile  README.md
haskell/latte/: Makefile  README.txt  latc
haskell/postcript/: Lib.hs  Main.hs  README.md
hello_stack/: README.md  hello_stack.c
presidential-election/: README.md
presidential-election/templates/: chart_template.js  district_template.html  districts.py  generate.py  gmina_template.html  info  pkw2000.csv  powiat_template.html  voivodeship_template.html
presidential-election/wybory/: charts.js  index.html  style.css
pstree/: README.md  pstree.patch
radio/: Makefile  README.md  const.h  receiver.c  receiver.h  sender.c  sender.h
security/: cute-cats.js  secure-proc.py  vector-calculator.py
sensors/: sensors.cpp
validator/: CMakeLists.txt  README.md  err.c  err.h  helper.h  run.c  tester.c  validator.c
volleyball-tournament/: Common.java  Kibic.java  Organizator.java  README.md  ReadingNumbersException.java  Turniej.java  turniej.sql
(+82 files in other folders)
